start FE migration + add Code to errors
