# api/openapi/specs/paths/blog/posts/post.yml
@@ -60,7 +60,12 @@ requestBody:
                       example: "paragraph"
                     data:
                       type: object
+                      additionalProperties: true
                       description: Data of the block
+                    tunes:
+                      type: object
+                      additionalProperties: true
+                      description: Tunes of the block
                 example:
                   - id: "1"
                     type: "paragraph"
